erDiagram
    USER {
        string address PK
        string role
        string company_name
        string pan
        string gstin
        string phone
        string email
        string kyc_status
        int reputation_score
        timestamp created_at
    }
    
    INVOICE {
        int token_id PK
        string invoice_hash UK
        string supplier FK
        string buyer FK
        string invoice_number
        date issue_date
        date due_date
        bigint face_value
        string currency
        string token_uri
        string status
        boolean gst_verified
        boolean erp_verified
        boolean logistics_verified
        timestamp registered_at
    }
    
    FUNDING_POSITION {
        int token_id PK
        string funder FK
        bigint purchase_price
        bigint face_value
        timestamp funded_at
        timestamp due_date
        string status
        timestamp settled_at
    }
    
    EVENT {
        int id PK
        int token_id FK
        string event_type
        json payload
        string tx_hash
        timestamp created_at
    }
    
    REPUTATION_RECORD {
        string address PK
        int score
        boolean blacklisted
        int total_transactions
        int successful_transactions
        int defaulted_transactions
        timestamp last_updated
    }
    
    INVOICE_NFT {
        int token_id PK
        string invoice_hash
        string supplier
        string buyer
        string token_uri
        timestamp minted_at
    }
    
    USER ||--o{ INVOICE : "creates as supplier"
    USER ||--o{ INVOICE : "accepts as buyer"
    USER ||--o{ FUNDING_POSITION : "funds as lender"
    INVOICE ||--|| INVOICE_NFT : "tokenized as"
    INVOICE ||--o| FUNDING_POSITION : "funded by"
    INVOICE ||--o{ EVENT : "generates"
    USER ||--|| REPUTATION_RECORD : "has"
